--- a/lesson3-CSS/contact2.html
+++ b/lesson3-CSS/contact2.html
@@ -25,9 +25,10 @@
         #text_other{
             display: none;
         }
-        #Other:checked ~ #text_other {
+
+        #Other:checked ~ textarea{
             display: block;
-        }
+        }   
     </style>
 </head>
 <body>
