--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -30,7 +30,7 @@
             function add() {
                 let tmp = 0;
                 const task = document.getElementById('task');
-
+                console.log(task.value);
                 if (task.value == '') {
                     alert("Please enter your task");
                     return;
